# SimpleEasy

./: .coverage  .editorconfig  .env.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  compose-e2e.yml  release.yml  ui-e2e.yml  ui.yml
src/: app.py  server.py
tests/: test_app.py  test_server.py
ui/: .eslintrc.cjs  .gitignore  Dockerfile.ui  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
ui/src/: App.test.tsx  App.tsx  styles.css
ui/tests/e2e/: smoke.spec.ts
