[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["src"]

[project]
name = "simpleeasy"
version = "0.1.0"
description = "Simple greeting demo with CLI and API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
simpleeasy = "src.app:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
pretty = true
